# shredder

./: README.md  docker-compose.yml  pyproject.toml  type_chart.d2
migrations/: env.py
migrations/versions/: 3db123c20660_populate_tables.py  6d906ea92a8d_create_and_populate_tables.py
shredder/: main.py
shredder/lib/: postgres_inspector.py
shredder/types/: config.py  database.py  inspectors.py
